--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker://pandoc/latex:latest
         with:
           args: >
-            manifeste.md
+            manifeste OpenGovernance.md
             --pdf-engine=xelatex
             --toc
             -V geometry:margin=2.5cm
