--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
             --pdf-engine=xelatex
             --toc
             -V geometry:margin=2.5cm
-            -o ManifesteOpenGovernance.pdf
+            -o Manifeste_OpenGovernance.pdf
 
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
