--- a/.github/workflows/dev-pdf.yml
+++ b/.github/workflows/dev-pdf.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker://pandoc/latex:latest
         with:
           args: >
-            GOVERNANCE.md
+            Manifeste_OpenGovernance.md
             --pdf-engine=pdflatex
             --toc
             -V lang=fr
