Change PDF engine from pdflatex to xelatex

--- a/.github/workflows/dev-pdf.yml
+++ b/.github/workflows/dev-pdf.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           args: >
             Manifeste_OpenGovernance.md
-            --pdf-engine=pdflatex
+            --pdf-engine=xelatex
             --toc
             -V lang=fr
             -o OpenGovernance.pdf
