Add dynamic date to PDF generation command

--- a/.github/workflows/release-dev-pdf.yml
+++ b/.github/workflows/release-dev-pdf.yml
@@ -29,6 +29,7 @@ jobs:
             --pdf-engine=xelatex
             --toc
             -V lang=fr
+            -V date="$(date '+%d %B %Y')"
             -o Manifeste_OpenGovernance.pdf
 
       - name: Create or update "dev" release
