--- a/.github/workflows/release-dev-pdf.yml
+++ b/.github/workflows/release-dev-pdf.yml
@@ -14,12 +14,16 @@ permissions:
   contents: write
 
 jobs:
+
   build-pdf:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set build date
+        run: echo "BUILD_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: Build PDF (Pandoc)
         uses: docker://pandoc/latex:latest
@@ -29,7 +33,7 @@ jobs:
             --pdf-engine=xelatex
             --toc
             -V lang=fr
-            -V date="$(date '+%d %B %Y')"
+            -V date=${{ env.BUILD_DATE }}
             -o Manifeste_OpenGovernance.pdf
 
       - name: Create or update "dev" release
