Fix geometry option format in PDF workflow

--- a/.github/workflows/release-dev-pdf.yml
+++ b/.github/workflows/release-dev-pdf.yml
@@ -33,9 +33,8 @@ jobs:
             --toc
             -V lang=fr
             -V date=${{ env.BUILD_DATE }}
-            -V geometry:top=2.5cm,bottom=2.5cm,left=2.3cm,right=2.3cm
+            -V geometry="a4paper,top=2.5cm,bottom=2.5cm,left=2.3cm,right=2.3cm"
             -o Manifeste_OpenGovernance.pdf
-
       - name: Install PDF merge tool (pdfunite)
         run: |
           sudo apt-get update
